overflow-x fixed

--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -27,6 +27,7 @@ html {
   font-family: "Poppins", sans-serif;
   font-size: 1rem;
   font-weight: 500;
+  overflow-x: hidden;
 }
 
 .bgSetting {
